--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
+    "nanoid": "^5.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.7.4",
-    "nanoid": "^5.0.6"
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -32,7 +32,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
+    "vite": "^5.4.16",
     "vite-plugin-node-polyfills": "^0.21.0"
   }
 }
